- landed pal config
- landed color ram and vic memory map
- landed render target and linked it to ui rendering
- landed vic text mode and vsync
- fix ...
- milestone 3: boot to basic

### Week 3 - 20170107

- landed ui options
- landed expansion port and cartridge
- revamped memory map
- landed joystick
- revamped cia port handling
- revamped loader support
- landed autostart
* hack up vic sprites
- milestone 4: run frogger_ii.crt

### Week 4 - 20170114

- landed logging
- landed app speed control
- landed cpu jam
- rework cia interrupt and step logic
- rework c64 frame execution logic
- rework c64 reset logic
- revamp cpu instruction tracing
- revamp cpu interrupt tracking, fixes frogger freeze
- landed cia tod
- landed datassette and tap loader
- rework vic drawing and add scrolling support
- milestone 5: run commando.tap

### Week 5 - 20170121

- ported resid
- landed sid
- milestone 6: run musicirq.prg

... LONG INTERMISSION ...

### Week 6 - 20171216

- landed compliant sid output

### Week 7 - 20171223

- landed revised cpu clock emulation
- landed revised keyboard handling

### Week 8 - 20171230

- landed revised model and system configuration
- landed revamped cli handling
- factored out app ui into separate components
- factored out common hw primitives into core module

### Week 9 - 20180106

- landed modularized emulator design

### Week 10 - 20180113

- fixed sound playback artifacts, hello pure sid playback
- milestone 7: run musicirq.prg without static/noise
- milestone 8: publish zinc64 crate

### Week 11 - 20180120

- landed revised cia clock emulation
- miletone 9: run cia1tab.p00

### Week 12 - 20180127

- landed debugger support

### Week 13 - 20180203

- landed nicer debugging support

### Week 14 - 20180210

- landed vic rewrite part 1
- milestone 10: run sid_player.prg

### Week 15 - 20180714

- landed vic border/graphics/sprite/mux units
- milestone 11: run superball.prg

### Week 16 - 20180721

- refactoring and cleanup
