@@ -1,0 +1,2 @@
+[target.x86_64-unknown-linux-gnu]
+image = "dsio/zinc64-x86_64-unknown-linux-gnu:latest"
