@@ -1,0 +1,29 @@
+# This script takes care of building your crate and packaging it for release
+
+set -ex
+
+main() {
+    local src=$(pwd) \
+          stage=
+
+    case $TRAVIS_OS_NAME in
+        linux)
+            stage=$(mktemp -d)
+            ;;
+        osx)
+            stage=$(mktemp -d -t tmp)
+            ;;
+    esac
+
+    test -f Cargo.lock || cargo generate-lockfile
+    cross build -p zinc64-sdl --target $TARGET --release
+    cp target/$TARGET/release/zinc64-sdl $stage/
+    cp -R res $stage/
+    cp logger.conf $stage/
+    cd $stage
+    tar czf $src/$CRATE_NAME-$TRAVIS_TAG-$TARGET.tar.gz *
+    cd $src
+    rm -rf $stage
+}
+
+main
