@@ -1,0 +1,13 @@
+FROM ubuntu:18.04
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    ca-certificates \
+    curl \
+    cmake \
+    gcc \
+    g++ \
+    make \
+    pkg-config \
+    libc6-dev \
+    libsdl2-dev
