@@ -112,3 +112,6 @@
 
 - refactoring and cleanup
 
+### Week 17 - 20180811
+
+- ci and deployment for linux/windows
